--- a/cape-main/online Shopping/backend/src/main/resources/application.properties
+++ b/cape-main/online Shopping/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # MySQL Database Configuration (MySQL 5.7.44.0)
 spring.datasource.url=jdbc:mysql://localhost:3306/shopify_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Connection Pool Configuration
